<resources>
    <string name="app_name">CoinStalk</string>
    <string name="home_menu">Home</string>
    <string name="favourite_menu">Favourite</string>
    <string name="settings_menu">Settings</string>
    <string name="onboarding_desc">Get notified on prize changes on your favourite coins</string>
    <string name="whats_your_name">Hey, what should we call you?</string>
    <string name="your_name_hint">Your name here</string>
    <string name="get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_coins">All Coins</string>
    <string name="top_gainers">Day Gainers</string>
    <string name="hey_noel">Hey, Noel</string>
    <string name="channel_name">Stalk Channel</string>
    <string name="channel_description">Stalk Description</string>
    <string name="notif_button">See Coins</string>
    <string name="marketcap">MarketCap:</string>
    <string name="marketcap_placeholder">2345565</string>
    <string name="symbol_place_holder">BTC</string>
    <string name="symbol">Symbol:</string>
    <string name="in_24_hours">in 24 hours</string>
    <string name="percentage_place_holder">25%</string>
    <string name="usd">USD</string>
    <string name="price_place_holder">25000</string>
    <string name="current_price">Current Price</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="you_have_not_added_any_favourites">You have not added any favourites.</string>
</resources>