<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity">

    <TextView
        android:id="@+id/onboarding_desc_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/onboarding_desc"
        android:layout_marginTop="@dimen/margin_32"
        android:textSize="@dimen/big_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/onboarding_guide_2"
        app:layout_constraintStart_toStartOf="@id/onboarding_guide_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/your_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/whats_your_name"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_32"
        android:textSize="@dimen/medium_text"
        app:layout_constraintEnd_toStartOf="@id/onboarding_guide_2"
        app:layout_constraintStart_toStartOf="@id/onboarding_guide_1"
        app:layout_constraintTop_toBottomOf="@id/onboarding_desc_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toStartOf="@+id/onboarding_guide_2"
        app:layout_constraintStart_toStartOf="@+id/onboarding_guide_1"
        app:layout_constraintTop_toBottomOf="@+id/your_name_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat"
            android:hint="@string/your_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/stalkButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/onboarding_guide_2"
        app:layout_constraintStart_toStartOf="@+id/onboarding_guide_1"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="1dp" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_guide_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/onboarding_guide_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

</androidx.constraintlayout.widget.ConstraintLayout>